Fix native scrollbar overlaying the Monaco scrollbar
Only showed up now after the updated packages, something must have changed in Monaco to cause this

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -154,6 +154,10 @@ a:hover {
       }
     }
 
+    #calcEditor {
+      overflow-y: hidden;
+    }
+
     /* textarea {
       line-height: var(--input-lh);
       border: none;
